// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#multiSignature (fake) registration 1`] = `
SignedTransactionData {
  "bigNumberService": BigNumberService {
    "configRepository": ConfigRepository {},
  },
  "broadcastData": Object {
    "id": "189f015c-2a58-4664-83f4-0b331fa9172a",
    "multiSignature": Object {
      "min": 2,
      "numberOfSignatures": 3,
      "publicKeys": Array [
        "Vpub5mtyU6Hx9xrx63Y3W4aGW1LuQkmwrq9xsQNgX7tDAM8DTHhE7vXMZ7Hue2FR8SMAGDW57fy76HFmN1jnckSmeX2cDMWVA1KViot6bLgJZuN",
      ],
    },
    "senderPublicKey": "0277ff9d72486136c7ee68abd46b13d3c1cef1b79f5604cdafafca0d880851bd73",
    "signatures": Array [
      "H4yJgFpPH6b0ED6OYBm0IJILt5u6h+E37WbKkTNjdAQZG/lS7ShWcyJ713QRNJRoEn3g7JrWcJjV+1hoicCAz6A=",
    ],
  },
  "decimals": 8,
  "identifier": "189f015c-2a58-4664-83f4-0b331fa9172a",
  "signedData": Object {
    "id": "189f015c-2a58-4664-83f4-0b331fa9172a",
    "multiSignature": Object {
      "min": 2,
      "numberOfSignatures": 3,
      "publicKeys": Array [
        "Vpub5mtyU6Hx9xrx63Y3W4aGW1LuQkmwrq9xsQNgX7tDAM8DTHhE7vXMZ7Hue2FR8SMAGDW57fy76HFmN1jnckSmeX2cDMWVA1KViot6bLgJZuN",
      ],
    },
    "senderPublicKey": "0277ff9d72486136c7ee68abd46b13d3c1cef1b79f5604cdafafca0d880851bd73",
    "signatures": Array [
      "H4yJgFpPH6b0ED6OYBm0IJILt5u6h+E37WbKkTNjdAQZG/lS7ShWcyJ713QRNJRoEn3g7JrWcJjV+1hoicCAz6A=",
    ],
  },
}
`;

exports[`#multiSignature (fake) registration 2`] = `
SignedTransactionData {
  "bigNumberService": BigNumberService {
    "configRepository": ConfigRepository {},
  },
  "broadcastData": Object {
    "id": "189f015c-2a58-4664-83f4-0b331fa9172a",
    "multiSignature": Object {
      "min": 2,
      "numberOfSignatures": 3,
      "publicKeys": Array [
        "Vpub5mtyU6Hx9xrx63Y3W4aGW1LuQkmwrq9xsQNgX7tDAM8DTHhE7vXMZ7Hue2FR8SMAGDW57fy76HFmN1jnckSmeX2cDMWVA1KViot6bLgJZuN",
        "Vpub5mYgzMb93fDtChZ2xmY7g3aEgHFjdgQE6P596AiL5zENEcVjDCciGfWmhZJngn6gVmBRh6E1Vp7aZYY7wQkMRTQSKhauGwYAUEdiGbS35D1",
      ],
    },
    "senderPublicKey": "0277ff9d72486136c7ee68abd46b13d3c1cef1b79f5604cdafafca0d880851bd73",
    "signatures": Array [
      "H4yJgFpPH6b0ED6OYBm0IJILt5u6h+E37WbKkTNjdAQZG/lS7ShWcyJ713QRNJRoEn3g7JrWcJjV+1hoicCAz6A=",
      "Hwap/1p+ng4GjwzJSzRw/YLi2mV1auhEWQa3mkP7j06BLHG+b69+VLBU68Qw0R0y0YTGsFi2b1Ls+dJZtk6b0FA=",
    ],
  },
  "decimals": 8,
  "identifier": "189f015c-2a58-4664-83f4-0b331fa9172a",
  "signedData": Object {
    "id": "189f015c-2a58-4664-83f4-0b331fa9172a",
    "multiSignature": Object {
      "min": 2,
      "numberOfSignatures": 3,
      "publicKeys": Array [
        "Vpub5mtyU6Hx9xrx63Y3W4aGW1LuQkmwrq9xsQNgX7tDAM8DTHhE7vXMZ7Hue2FR8SMAGDW57fy76HFmN1jnckSmeX2cDMWVA1KViot6bLgJZuN",
        "Vpub5mYgzMb93fDtChZ2xmY7g3aEgHFjdgQE6P596AiL5zENEcVjDCciGfWmhZJngn6gVmBRh6E1Vp7aZYY7wQkMRTQSKhauGwYAUEdiGbS35D1",
      ],
    },
    "senderPublicKey": "0277ff9d72486136c7ee68abd46b13d3c1cef1b79f5604cdafafca0d880851bd73",
    "signatures": Array [
      "H4yJgFpPH6b0ED6OYBm0IJILt5u6h+E37WbKkTNjdAQZG/lS7ShWcyJ713QRNJRoEn3g7JrWcJjV+1hoicCAz6A=",
      "Hwap/1p+ng4GjwzJSzRw/YLi2mV1auhEWQa3mkP7j06BLHG+b69+VLBU68Qw0R0y0YTGsFi2b1Ls+dJZtk6b0FA=",
    ],
  },
}
`;

exports[`#multiSignature (fake) registration 3`] = `
SignedTransactionData {
  "bigNumberService": BigNumberService {
    "configRepository": ConfigRepository {},
  },
  "broadcastData": Object {
    "id": "189f015c-2a58-4664-83f4-0b331fa9172a",
    "multiSignature": Object {
      "min": 2,
      "numberOfSignatures": 3,
      "publicKeys": Array [
        "Vpub5mtyU6Hx9xrx63Y3W4aGW1LuQkmwrq9xsQNgX7tDAM8DTHhE7vXMZ7Hue2FR8SMAGDW57fy76HFmN1jnckSmeX2cDMWVA1KViot6bLgJZuN",
        "Vpub5mYgzMb93fDtChZ2xmY7g3aEgHFjdgQE6P596AiL5zENEcVjDCciGfWmhZJngn6gVmBRh6E1Vp7aZYY7wQkMRTQSKhauGwYAUEdiGbS35D1",
        "Vpub5mSSLBPFi3acdjk5giwrmA7gXPAJsiLXXKibgjXYycH1gp95t2Pqv3U8dT9kEGxvAdfiN5DGmozDmZ7sJyDuMgfxt4h4KujF7MWt5tQH8py",
      ],
    },
    "senderPublicKey": "0277ff9d72486136c7ee68abd46b13d3c1cef1b79f5604cdafafca0d880851bd73",
    "signatures": Array [
      "H4yJgFpPH6b0ED6OYBm0IJILt5u6h+E37WbKkTNjdAQZG/lS7ShWcyJ713QRNJRoEn3g7JrWcJjV+1hoicCAz6A=",
      "Hwap/1p+ng4GjwzJSzRw/YLi2mV1auhEWQa3mkP7j06BLHG+b69+VLBU68Qw0R0y0YTGsFi2b1Ls+dJZtk6b0FA=",
      "IE6oFRIsi8qYTtujTSEhgOXPPdPBUSTzvCggm0Zq8kdBemOsEz2ElRuqHRmEaGcuQa/qvf2sBfGlLK5Gknslykc=",
    ],
  },
  "decimals": 8,
  "identifier": "189f015c-2a58-4664-83f4-0b331fa9172a",
  "signedData": Object {
    "id": "189f015c-2a58-4664-83f4-0b331fa9172a",
    "multiSignature": Object {
      "min": 2,
      "numberOfSignatures": 3,
      "publicKeys": Array [
        "Vpub5mtyU6Hx9xrx63Y3W4aGW1LuQkmwrq9xsQNgX7tDAM8DTHhE7vXMZ7Hue2FR8SMAGDW57fy76HFmN1jnckSmeX2cDMWVA1KViot6bLgJZuN",
        "Vpub5mYgzMb93fDtChZ2xmY7g3aEgHFjdgQE6P596AiL5zENEcVjDCciGfWmhZJngn6gVmBRh6E1Vp7aZYY7wQkMRTQSKhauGwYAUEdiGbS35D1",
        "Vpub5mSSLBPFi3acdjk5giwrmA7gXPAJsiLXXKibgjXYycH1gp95t2Pqv3U8dT9kEGxvAdfiN5DGmozDmZ7sJyDuMgfxt4h4KujF7MWt5tQH8py",
      ],
    },
    "senderPublicKey": "0277ff9d72486136c7ee68abd46b13d3c1cef1b79f5604cdafafca0d880851bd73",
    "signatures": Array [
      "H4yJgFpPH6b0ED6OYBm0IJILt5u6h+E37WbKkTNjdAQZG/lS7ShWcyJ713QRNJRoEn3g7JrWcJjV+1hoicCAz6A=",
      "Hwap/1p+ng4GjwzJSzRw/YLi2mV1auhEWQa3mkP7j06BLHG+b69+VLBU68Qw0R0y0YTGsFi2b1Ls+dJZtk6b0FA=",
      "IE6oFRIsi8qYTtujTSEhgOXPPdPBUSTzvCggm0Zq8kdBemOsEz2ElRuqHRmEaGcuQa/qvf2sBfGlLK5Gknslykc=",
    ],
  },
}
`;
